2003-07-23  JMB  Support for new Zaurus file navigation widget

    PortaBase can now be built with support for Sharp's new file navigation
    widget (available in the SL-5600, SL-5500 with the 3.10 ROM, and all
    Japanese Linux-based Zaurus models).  This allows directory navigation
    and creating files on the CF or SD cards without first saving them in
    main memory, among other advantages.  Since the library containing this
    widget is not available for older ROMs or OpenZaurus, the old Qtopia
    file list widget is still supported as an option.

2003-06-19  JMB  Calculated fields, view rename bugfix

    There is now a new column type called "Calculation", which represents
    a value derived from the values of other columns in the same row.  The
    formula for this calculation is defined by the user in a dialog launched
    by clicking a button in the column editor.

    Version 1.6 introduced a bug where attempting to rename a view would
    crash PortaBase; just fixed this.

2003-06-11  #################### PortaBase 1.7 ####################

2003-06-04  JMB  Columns editor bugfix

    Fixed bug in columns editor where editing a column after adding one
    of another type could result in incorrect data being displayed.

2003-06-03  JMB  Taiwanese translation, updated Japanese UI translation

    Added a Taiwanese translation of the UI and help file provided by
    Jeng-Ping Lin.  Also updated the Japanese UI translation to include
    phrases from the color selector dialog and such.

2003-06-02  JMB  Dynamic string entry field bugfixes

    Fixed a few usability problems with the new dynamic string entry
    fields.  A horizontal scrollbar is never shown (it completely obscured
    the text), it no longer defines a minimum width large enough to force
    a horizontal scrollbar in the row editor, and tab and shift+tab can
    once again be used to navigate between fields instead of adding a