@@ -122,7 +122,8 @@ public:
     QString formatDouble(double value, int decimals=2);
     void calculateAll();
 
-    QString addRow(QStringList values, int *rowId = 0);
+    QString addRow(QStringList values, int *rowId = 0,
+                   bool acceptSequenceVals = FALSE);
     void updateRow(int rowId, QStringList values);
     void deleteRow(int id);
     void toggleBoolean(int rowId, QString colName);
