@@ -22,7 +22,8 @@
 #define DATE 5
 #define TIME 6
 #define CALC 7
-#define LAST_TYPE 7
+#define SEQUENCE 8
+#define LAST_TYPE 8
 
 #define FIRST_ENUM 100
 
