@@ -30,7 +30,7 @@
 <a name="intro"><b>1)Introduction</b></a><br>
 PortaBase is a small database program for creating, browsing, and editing custom tables of data.  Typical uses are media inventories, reference charts, TODO lists, shopping lists, etc.  Notable features include:<br>
 <ul>
-  <li>String, Integer, Decimal, Boolean, Note (multi-line text), Date, Time, Calculation, and Enum column types</li>
+  <li>String, Integer, Decimal, Boolean, Note (multi-line text), Date, Time, Calculation, Sequence, and Enum column types</li>
   <li>Custom data views (subsets of the columns in any order)</li>
   <li>Filter the displayed rows using sets of conditions</li>
   <li>Sort the rows by any combination of columns, each in ascending or descending order</li>
@@ -220,7 +220,7 @@ The row editor is shown whenever a row of data is added or edited.  It has one r
 After editing the values as desired, click "OK" to accept the currently displayed values, or "X"/"Cancel" to cancel the row addition (if adding a row) or leave the current values unchanged (if editing a row).<br>
 <br>
 <a name="rowview"><b>10)Row viewer</b></a><br>
-The row viewer is a dialog designed to conveniently see all of the data for one row at a time.  Like the row editor, it has the column labels on the left and values on the right.  But the values are not editable, and they wrap so you don't have to scroll horizontally to see everything.  The complete content of note fields is shown as well, instead of just the first few words.  Pressing the left and right arrows at the bottom of the screen or the left and right directions on the direction pad allows you to navigate between rows in the current view.  Pressing the edit button at the bottom of the screen lets you launch the row editor for the current row; if you click "OK" in the row editor you will be taken back to the data viewer, otherwise you will be returned to the row viewer.<br>
+The row viewer is a dialog designed to conveniently see all of the data for one row at a time.  Like the row editor, it has the column labels on the left and values on the right.  But the values are not editable, and they wrap so you don't have to scroll horizontally to see everything.  Also, only the columns in the current view are shown (in the view-specified order); to see all columns, select the "All Columns" view before launching the row viewer.  The complete content of note fields is shown as well, instead of just the first few words.  Pressing the left and right arrows at the bottom of the screen or the left and right directions on the direction pad allows you to navigate between rows in the current view.  Pressing the edit button at the bottom of the screen lets you launch the row editor for the current row; if you click "OK" in the row editor you will be taken back to the data viewer, otherwise you will be returned to the row viewer.<br>
 <br>
 <a name="noteedit"><b>11)Note editor/viewer</b></a><br>
 The "Note" column type is for blocks of text which may contain multiple lines (as opposed to the "String" type, which is better suited for relatively short single lines of text).  The larger size of the content of such columns merits its own (very simple) dialog.  Both in the row editor and in the default value section of the column editor, a Note value is shown as a button containing a note icon and the beginning of the Note's content (as much as will fit).  To see and/or change the full text, press this button; a full-screen text editor dialog will appear, showing the current text of the Note.  Click "OK" to accept any changes you have made or "X"/"Cancel" to revert to the original content.<br>
